--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                 ctx.font = '18px serif';
                 ctx.fillStyle = '#374151';
                 const lines = [
-                    '위 사람은 본 기관에서 주관하는',
-                    '디지털 역량 강화 교육 과정을',
+                    '위 사람은 자유스콜에서 주관하는',
+                    '삶을 위한 AI 교육과정을',
                     '성실히 이수하였음을 증명합니다.'
                 ];
                 
@@ -166,7 +166,7 @@
                 // 서명
                 ctx.font = 'bold 24px serif';
                 ctx.fillStyle = '#111827';
-                ctx.fillText('한국 디지털 교육원장', width / 2 - 30, 680);
+                ctx.fillText('자유스콜레', width / 2 - 30, 680);
 
                 // 도장
                 ctx.save();
@@ -179,7 +179,7 @@
                 ctx.stroke();
                 ctx.font = '14px serif';
                 ctx.fillStyle = '#dc2626';
-                ctx.fillText('인', 0, 5);
+                ctx.fillText('자유스콜레', 0, 5);
                 ctx.restore();
             };
 
