--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <!-- 중요: 깃허브 이미지 사용 시 반드시 'Raw' 주소를 사용하세요! -->
     <!-- 예: https://raw.githubusercontent.com/사용자명/저장소명/main/이미지.png -->
-    <meta property="og:image" content="https://placehold.co/1200x630/fffdf5/1e3a8a.png?text=Certificate+Preview" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/ejang/Certificate/refs/heads/main/%E1%84%89%E1%85%A1%E1%86%B1%E1%84%8B%E1%85%B3%E1%86%AF%20%E1%84%8B%E1%85%B1%E1%84%92%E1%85%A1%E1%86%AB%20AI%20%E1%84%80%E1%85%AD%E1%84%8B%E1%85%B2%E1%86%A8%20%E1%84%89%E1%85%AE%E1%84%85%E1%85%AD.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     
