--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 ctx.stroke();
                 ctx.font = '14px serif';
                 ctx.fillStyle = '#dc2626';
-                ctx.fillText('인', 0, 5);
+                ctx.fillText('자유스콜레', 0, 5);
                 ctx.restore();
             };
 
